# Effective-algorithms

List 1 - Dynamic programming memo/: CMakeLists.txt  main.cpp
List 1 - Dynamic programming memo/algorithms/: TspDp.cpp  TspDp.h
List 1 - Dynamic programming memo/utilities/: AdjacencyMatrix.cpp  AdjacencyMatrix.h  FileReader.h  menu.h
List 1 - Dynamic programming memo/utilities/stopwatch/: Stopwatch.h
List 2 - Tabu and Simulated annealing/: CMakeLists.txt
List 2 - Tabu and Simulated annealing/algorithms/: SA.cpp  SA.h  TS.cpp  TS.h
List 2 - Tabu and Simulated annealing/utilities/: menu.cpp  menu.h
List 3 - Genetic algorithm/: CMakeLists.txt  main.cpp
List 3 - Genetic algorithm/algorithms/: Chromosome.cpp  Chromosome.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Graph.cpp  Graph.h  test.h
List 3 - Genetic algorithm/utilities/: FileReader.h  menu.cpp  menu.h
